stylefile.css
html, body {
  margin: 0;
  padding: 0;
}

html {
  font-size: 10px;
  background-color: black;
}

body {
  width: 90%;
  min-width: 800px;
  margin: 0 auto;
}

/* || typography */

h1, h2, h3 {
  font-family: 'Cinzel Decorative', cursive, Arial;
  color: #2a2a2a;
}

p, input, li {
  font-family: 'Roboto Condensed', sans-serif, Arial;
  color: #2a2a2a;
}

h1 {
  font-size: 5rem;
  margin-top: 55px;
  text-align: center;
  text-shadow: 2px 2px 10px black;
}

h2 {
  font-size: 3rem;
  text-align: center;
}

h3 {
  font-size: 2.2rem;
}

p, li {
  font-size: 1.6rem;
  line-height: 1.5;
}

/* || header layout */

header {
  margin-bottom: 10px;
  font-family: 'Cinzel Decorative', cursive;
  display: flex;
  flex-flow: row wrap;
}

body > * {
  background-color: rgb(0, 255, 213);
  padding: 1%;
}

main, header, nav, article, aside, footer, section {
  background-color: rgba(0,255, 213);
  padding: 1%;
}

h1 {
  flex: 5;
  text-transform: uppercase;
}

header img {
  display: block;
  height: 3%;
  padding-top: 20.15px;
  max-width: 13%;
  
}

nav {
  height: 50px;
  flex: 100%;
  display: flex;
}

nav ul {
  padding: 0;
  list-style-type: none;
  flex: 2;
  display: flex;
}

nav li {
  display: inline;
  text-align: center;
  flex: 1;
}

nav a, nav span {
  display: inline-block;
  font-size: 2rem;
  height: 3rem;
  line-height: 1.7;
  text-transform: uppercase;
  text-decoration: none;
  color: black;

}
main {
  display: flex;
  padding: 1%;
}

img {
  border-radius: 8px;
  display: block;
  padding: 1%;
  margin-top: 13px;
    margin-left: auto;
    margin-right: auto;
    width: 98%;
}

article {
  flex: 4;
  padding: 0%;
}

aside {
  flex: 2.5;
  margin-left: 7px;
  padding: 1.5%;
}

aside a {
  display: block;
  float: center;
  width: 60%;
}

footer {
  margin-top: 10px;
}
[href="mailto:jburton8686@hotmail.com"] {
  font-size: 18px;
}
/* These styles will style our link
   in all states */
[href="#"] {
  color: blue;
  font-weight: bold;
}

/* We want visited links to be the same color
   as non visited links */
[href="#"] :visited {
  color: blue;
}

/* We highlight the link when it is
   hovered (mouse), activated
   or focused (keyboard) */
   [href="#"]:hover,
   [href="#"]:active,
   [href="#"]:focus {
  color: black;
  text-decoration: none;
}
[href="mailto:jburton8686@hotmail.com"] {
  color: blue;
  font-weight: bold;
}

/* We want visited links to be the same color
   as non visited links */
   [href="mailto:jburton8686@hotmail.com"] :visited {
  color: blue;
}

/* We highlight the link when it is
   hovered (mouse), activated
   or focused (keyboard) */
   [href="mailto:jburton8686@hotmail.com"]:hover,
   [href="mailto:jburton8686@hotmail.com"]:active,
   [href="mailto:jburton8686@hotmail.com"]:focus {
  color: black;
  text-decoration: none;
}

